--- a/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProducts.Search.cshtml
+++ b/src/Smartstore.Web/Views/Product/Partials/Product.AssociatedProducts.Search.cshtml
@@ -1,8 +1,12 @@
-﻿@using Smartstore.Web.Models.Catalog
+﻿@using Smartstore.Core.Catalog
+@using Smartstore.Web.Models.Catalog
 
 @model GroupedProductModel
 
-<div sm-if="Model.Products.TotalCount >= Model.Configuration.SearchMinAssociatedCount" class="instasearch-form has-icon col-4 mb-2">
+@inject CatalogSettings CatalogSettings
+
+<div sm-if="Model.Products.TotalCount >= (Model.Configuration.SearchMinAssociatedCount ?? CatalogSettings.SearchMinAssociatedProductsCount)" 
+     class="instasearch-form has-icon col-4 mb-2">
     <input type="text"
            class="instasearch-term form-control skip-pd-ajax-update"
            name="associatedProductsSearchTerm"
