--- a/src/Smartstore.Web/wwwroot/lib/select2/scss/_multiple.scss
+++ b/src/Smartstore.Web/wwwroot/lib/select2/scss/_multiple.scss
@@ -20,7 +20,7 @@
 
 .select2-search--inline {
   float: left;
-  width: 100%;
+  flex-grow: 1;
 
   .select2-search__field {
     box-sizing: border-box;
