--- a/src/Smartstore.Web/Views/Checkout/ShippingAddress.cshtml
+++ b/src/Smartstore.Web/Views/Checkout/ShippingAddress.cshtml
@@ -72,7 +72,9 @@
                         </div>
                     }
 
-                    <partial name="AddNewAddress" />
+                    <div class="col">
+                        <partial name="AddAddressButton" />
+                    </div>
                 </div>
             </fieldset>
 
@@ -104,22 +106,4 @@
     </div>
 </div>
 
-<script sm-target-zone="scripts" data-origin="shipping-address">
-    $(function () {
-        $('.select-shipping-address-button').on('click', function (e) {
-            e.preventDefault();
-            $(this).postData({});
-            return false;
-        });
-
-        $('.new-address-next-step-button').on('click', function () {
-            $('#nextstep').trigger('click');
-            return false;
-        });
-
-        @if (!ViewData.ModelState.IsValid)
-        {
-            <text>$.scrollTo($('.address-form'), 400, { offset: -40 });</text>
-        }
-    });
-</script>
+<partial name="AddressScript" />
