--- a/src/Smartstore.Web/Views/Shared/Components/OrderTotals/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/OrderTotals/Default.cshtml
@@ -2,6 +2,12 @@
 
 @model OrderTotalsModel
 
+@{
+    var shippingLabelHtml = Model.ShippingInfoUrl.HasValue()
+        ? $"<a href=\"{Model.ShippingInfoUrl}\" target=\"_blank\">{T("ShoppingCart.Totals.Shipping")}</a>:"
+        : $"{T("ShoppingCart.Totals.Shipping")}:";
+}
+
 <div sm-if="Model.ShowConfirmOrderLegalHint && !Model.IsEditable" class="alert alert-warning confirm-order-legal-hint">
     @T("OrderSummary.ConfirmOrderLegalHint")
 </div>
@@ -39,14 +45,7 @@
     <tr class="cart-summary-shipping">
         <td class="cart-summary-label">
             <span class="text-nowrap">
-                @if (Model.ShippingInfoUrl.HasValue())
-                {
-                    <a href="@Model.ShippingInfoUrl" target="_blank">@T("ShoppingCart.Totals.Shipping")</a>
-                }
-                else
-                {
-                    @T("ShoppingCart.Totals.Shipping")
-                }:
+                @Html.Raw(shippingLabelHtml)
             </span>
             <span sm-if="Model.RequiresShipping && Model.SelectedShippingMethod.HasValue()" class="font-weight-medium">
                 @Model.SelectedShippingMethod
