--- a/src/Smartstore.Web/Views/Checkout/Confirm.cshtml
+++ b/src/Smartstore.Web/Views/Checkout/Confirm.cshtml
@@ -39,118 +39,10 @@
 
 <script sm-target-zone="scripts" data-origin="checkout-confirm">
     $(function () {
-        @if (Model.TermsOfServiceEnabled)
-        {
-            <text>
-                var modal = $("#terms-of-service-modal .modal-body");
-                $(".terms-trigger").on("click", function (e) {
-                    e.preventDefault();
-                    modal.html('<iframe id="iframe-terms-of-service" src="' + $(this).attr('href') + '" frameBorder="0" class="h-100" />');
-                });
-            </text>
-        }
-
-        var buyButton = $(".btn-buy");
-
-        function setBuyButtonState(disable) {
-            buyButton.prop('disabled', disable);
-            buyButton.find('.fa')
-                .removeClass('fa-angle-right fa-spinner fa-spin')
-                .addClass(disable ? 'fa-spinner fa-spin' : 'fa-angle-right');
-        }
-
-        function processBuyButtonClick(customerAgreed, showThrobber) {
-            var termOfServiceOk = true,
-                userAgreementsOk = true,
-                esdRevocationWaiverOk = true,
-                cartItems = $('#cart-items');
-
-            if (_.isTrue(customerAgreed)) {
-                // Reverse apply. We do that just to indicate that no entered data is lost.
-                $("#CustomerComment").val($("#customercommenthidden").val());
-            }
-            else {
-                $("#customercommenthidden").val($("#CustomerComment").val());
-            }
-
-			// Terms of services.
-            @if (Model.TermsOfServiceEnabled)
-            {
-				<text>
-                if (!$('#termsofservice').is(':checked')) {
-                    displayNotification(@T("Checkout.TermsOfService.PleaseAccept").JsValue, "error");
-                    termOfServiceOk = false;
-                    $.scrollTo($('#termsofservice'), 800, { offset: -70 });
-                }
-                else {
-                    termOfServiceOk = true;
-                }
-				</text>
-            }
-
-            // Agree user agreement for downloadable products.
-            cartItems.find('input[name^=AgreeUserAgreement]').each(function () {
-                if (_.isTrue(customerAgreed)) {
-                    $(this).prop('checked', true);
-                }
-                else if (!$(this).is(':checked')) {
-                    userAgreementsOk = false;
-                    displayNotification(@T("Checkout.DownloadUserAgreement.PleaseAgree").JsValue);
-                    if (termOfServiceOk) {
-                        $.scrollTo(cartItems, 800, { offset: -20 });
-                    }
-                    return false;
-                }
-            });
-
-            // Agree ESD revocation waiver.
-			@if(Model.ShowEsdRevocationWaiverBox)
-			{
-				<text>
-                cartItems.find('input[name^=AgreeEsdRevocationWaiver]').each(function () {
-                    if (_.isTrue(customerAgreed)) {
-                        $(this).prop('checked', true);
-                    }
-                    else if (!$(this).is(':checked')) {
-                        esdRevocationWaiverOk = false;
-                        displayNotification(@T("Checkout.EsdRevocationWaiverConfirmation.PleaseAgree").JsValue);
-                        if (termOfServiceOk) {
-                            $.scrollTo(cartItems, 800, { offset: -20 });
-                        }
-                        return false;
-                    }
-                });
-                </text>
-			}
-
-            if (termOfServiceOk && userAgreementsOk && esdRevocationWaiverOk) {
-                var submitOrderEvent = jQuery.Event('submitOrder');
-                submitOrderEvent.isOrderValid = true;
-                submitOrderEvent.isMobile = false;
-                submitOrderEvent.disableBuyButton = false;
-
-                $(document).trigger(submitOrderEvent);
-
-                if (true === submitOrderEvent.isOrderValid) {
-                    try {
-                        setBuyButtonState(true);
-
-                        if (_.isTrue(showThrobber)) {
-                            $.throbber.show({ white: true, small: false, speed: 0, message: @T("Checkout.OrderCompletes").JsValue});
-                        }
-                    }
-                    catch (e) { }
-
-                    $('#confirm-order-form').submit();
-                }
-                else if (true === submitOrderEvent.disableBuyButton) {
-                    setBuyButtonState(true);
-                }
-            }
-        }
+        var buyButton = $('.btn-buy');
 
         // Buy button has been clicked.
-        buyButton.on("click", function () {
+        buyButton.on('click', function () {
             processBuyButtonClick(false);
         });
 
@@ -184,5 +76,123 @@
                 catch (e) { }
             }
         });
+
+        @if (Model.TermsOfServiceEnabled)
+        {<text>
+            $('.terms-trigger').on('click', function (e) {
+                e.preventDefault();
+                $('#terms-of-service-modal .modal-body').html('<iframe id="iframe-terms-of-service" src="' + $(this).attr('href') + '" frameBorder="0" class="h-100" />');
+            });
+        </text>}
+
+        @if (Model.ShoppingCart.Items.Any(x => x.IsDownload && x.HasUserAgreement))
+        {<text>
+            $('a.download-user-agreement').on('click', function () {
+                const url = '@(Url.Action("GetUserAgreement", "Download"))?productId=' + $(this).attr('data-id');
+                const dialog = $('#user-agreement-modal');
+
+                dialog.find('.modal-body').empty();
+
+                $.get(url, function (html) {
+                    dialog.find('.modal-body').html(html);
+                });
+
+                dialog.modal();
+                return false;
+            });
+        </text>}
+
+        function setBuyButtonState(disable) {
+            buyButton.prop('disabled', disable);
+            buyButton.find('.fa')
+                .removeClass('fa-angle-right fa-spinner fa-spin')
+                .addClass(disable ? 'fa-spinner fa-spin' : 'fa-angle-right');
+        }
+
+        function processBuyButtonClick(customerAgreed, showThrobber) {
+            var termOfServiceOk = true,
+                userAgreementsOk = true,
+                esdRevocationWaiverOk = true,
+                cartItems = $('#cart-items');
+
+            if (_.isTrue(customerAgreed)) {
+                // Reverse apply. We do that just to indicate that no entered data is lost.
+                $("#CustomerComment").val($("#customercommenthidden").val());
+            }
+            else {
+                $("#customercommenthidden").val($("#CustomerComment").val());
+            }
+
+            // Terms of services.
+            @if (Model.TermsOfServiceEnabled)
+            {<text>
+                if (!$('#termsofservice').is(':checked')) {
+                    displayNotification(@T("Checkout.TermsOfService.PleaseAccept").JsValue, "error");
+                    termOfServiceOk = false;
+                    $.scrollTo($('#termsofservice'), 800, { offset: -70 });
+                }
+                else {
+                    termOfServiceOk = true;
+                }
+            </text>}
+
+            // Agree user agreement for downloadable products.
+            cartItems.find('input[name^=AgreeUserAgreement]').each(function () {
+                if (_.isTrue(customerAgreed)) {
+                    $(this).prop('checked', true);
+                }
+                else if (!$(this).is(':checked')) {
+                    userAgreementsOk = false;
+                    displayNotification(@T("Checkout.DownloadUserAgreement.PleaseAgree").JsValue);
+                    if (termOfServiceOk) {
+                        $.scrollTo(cartItems, 800, { offset: -20 });
+                    }
+                    return false;
+                }
+            });
+
+            // Agree ESD revocation waiver.
+			@if(Model.ShowEsdRevocationWaiverBox)
+			{<text>
+                cartItems.find('input[name^=AgreeEsdRevocationWaiver]').each(function () {
+                    if (_.isTrue(customerAgreed)) {
+                        $(this).prop('checked', true);
+                    }
+                    else if (!$(this).is(':checked')) {
+                        esdRevocationWaiverOk = false;
+                        displayNotification(@T("Checkout.EsdRevocationWaiverConfirmation.PleaseAgree").JsValue);
+                        if (termOfServiceOk) {
+                            $.scrollTo(cartItems, 800, { offset: -20 });
+                        }
+                        return false;
+                    }
+                });
+            </text>}
+
+            if (termOfServiceOk && userAgreementsOk && esdRevocationWaiverOk) {
+                var submitOrderEvent = jQuery.Event('submitOrder');
+                submitOrderEvent.isOrderValid = true;
+                submitOrderEvent.isMobile = false;
+                submitOrderEvent.disableBuyButton = false;
+
+                $(document).trigger(submitOrderEvent);
+
+                if (true === submitOrderEvent.isOrderValid) {
+                    try {
+                        setBuyButtonState(true);
+
+                        if (_.isTrue(showThrobber)) {
+                            $.throbber.show({ white: true, small: false, speed: 0, message: @T("Checkout.OrderCompletes").JsValue});
+                        }
+                    }
+                    catch (e) { }
+
+                    $('#confirm-order-form').submit();
+                }
+                else if (true === submitOrderEvent.disableBuyButton) {
+                    setBuyButtonState(true);
+                }
+            }
+        }
     });
 </script>
