Display customer generic attributes in backend (like in Order / Attributes)

--- a/src/Smartstore.Web/Areas/Admin/Views/Customer/_CreateOrUpdate.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Customer/_CreateOrUpdate.cshtml
@@ -117,6 +117,9 @@
                 </button>
             </p>
         </tab>
+        <tab sm-if="Model.Id != 0" sm-title="@T("Admin.Common.GenericAttributes")" sm-icon="bi:card-checklist">
+            <partial name="_Attributes" model="Model" />
+        </tab>
     }
 </tabstrip>
 
