--- a/src/Smartstore.Web/Areas/Admin/Views/Customer/_CreateOrUpdate.cshtml
+++ b/src/Smartstore.Web/Areas/Admin/Views/Customer/_CreateOrUpdate.cshtml
@@ -1,4 +1,5 @@
-﻿@using Smartstore.Collections
+﻿@using Smartstore.Admin.Models.Common
+@using Smartstore.Collections
 @using Smartstore.Core.Security
 
 @model CustomerModel
@@ -117,8 +118,8 @@
                 </button>
             </p>
         </tab>
-        <tab sm-if="Model.Id != 0" sm-title="@T("Admin.Common.GenericAttributes")" sm-icon="bi:card-checklist">
-            <partial name="_Attributes" model="Model" />
+        <tab sm-if="Model.Id != 0" sm-title="@T("Admin.Common.GenericAttributes")" sm-icon="bi:card-checklist" sm-adaptive-height="true">
+            <partial name="_Grid.GenericAttributes" model='new GenericAttributeModel { EntityName = "Customer", AttributeEntityId = Model.Id }' />
         </tab>
     }
 </tabstrip>
